--- a/LearnStack/Calculator/Calculator.vcxproj.filters
+++ b/LearnStack/Calculator/Calculator.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Calculator.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
