--- a/LearnStack/Calculator/Calculator.vcxproj
+++ b/LearnStack/Calculator/Calculator.vcxproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <ClCompile Include="Calculator.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Stack.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
