--- a/LearnTree/BinaryTree/BinaryTree.vcxproj.filters
+++ b/LearnTree/BinaryTree/BinaryTree.vcxproj.filters
@@ -20,7 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BinaryTree.h">
+    <ClInclude Include="Tree.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BinaryTree.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
